--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,10 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
+
+        classpath ('com.google.gms:google-services:4.2.0') {
+            exclude group: 'com.google.guava', module: 'guava-jdk5'
+        }
     }
 }
 subprojects {
