--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_calendar_carousel: ^1.4.12
   faker: ^1.2.1
   zefyr: ^0.10.0
+  
   device_info: ^0.4.2+4
   async: ^2.4.0
   flare_flutter: ^1.5.5
@@ -52,7 +53,7 @@ dependencies:
   googleapis: ^0.54.0
   date_utils: ^0.1.0+3
   health: ^1.0.0
-  auto_route: ^0.2.1
+  auto_route: ^0.3.0
   bloc_provider: ^0.7.0
   equatable: ^1.2.2
   flutter_bloc: ^6.0.1
@@ -80,9 +81,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner:
-  auto_route_generator: ^0.2.1+3
+  auto_route_generator: ^0.3.0
 
-
+dependency_overrides:
+  analyzer: '0.39.14'
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
