--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,4 @@
+
 name: sorted
 description: Notes taking app using sqflite
 
@@ -22,7 +23,6 @@ dependencies:
   outline_material_icons: ^0.1.0
   sqflite: ^1.1.5
   intl: ^0.16.0
-  url_launcher: ^5.0.3
   shared_preferences: ^0.5.3+1
   data_connection_checker: ^0.3.4
   share: ^0.6.1+1
@@ -41,7 +41,7 @@ dependencies:
   flutter_calendar_carousel: ^1.4.12
   faker: ^1.2.1
   zefyr: ^0.10.0
-  
+  reorderables: ^0.3.2
   device_info: ^0.4.2+4
   async: ^2.4.0
   flare_flutter: ^1.5.5
@@ -58,16 +58,19 @@ dependencies:
   equatable: ^1.2.2
   flutter_bloc: ^6.0.1
   dartz: ^0.9.1
+  sa_anicoto: ^1.0.3
+  supercharged: ^1.10.0
   connectivity: ^0.4.9
+  url_launcher: ^5.4.2
+  audioplayers: ^0.16.1
 
-
-    # The following adds the Cupertino Icons font to your application.   # Use with the CupertinoIcons class for iOS style icons.   cupertino_icons: ^0.1.2
+  # The following adds the Cupertino Icons font to your application.   # Use with the CupertinoIcons class for iOS style icons.   cupertino_icons: ^0.1.2
   csv: ^4.0.3
   sqflite_porter:
     git:
       url: git://github.com/tekartik/sqflite_more
       ref: dart2
-      
+
       path: sqflite_porter
     version: '>=0.2.0'
   simple_animations: ^1.3.11
@@ -76,18 +79,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  camera: ^0.5.8+5
+  cached_network_image: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner:
+  build_runner: null
   auto_route_generator: ^0.3.0
 
 dependency_overrides:
   analyzer: '0.39.14'
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -98,32 +102,33 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      -  assets/images/
+    - assets/images/
+    - assets/animations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-     - family: ZillaSlab
-       fonts:
-         - asset: fonts/ZillaSlab-Regular.ttf
-         - asset: fonts/ZillaSlab-Italic.ttf
-           style: italic
-         - asset: fonts/ZillaSlab-Bold.ttf
-           weight: 700
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+    - family: ZillaSlab
+      fonts:
+        - asset: fonts/ZillaSlab-Regular.ttf
+        - asset: fonts/ZillaSlab-Italic.ttf
+          style: italic
+        - asset: fonts/ZillaSlab-Bold.ttf
+          weight: 700
+    - family: Eastman
+      fonts:
+        - asset: fonts/EastmanTrial-Medium.otf
+        - asset: fonts/EastmanTrial-BlackItalic.otf
+          style: italic
+        - asset: fonts/EastmanTrial-Bold.otf
+          weight: 700
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
