--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,5 @@
-
 name: sorted
-description: Notes taking app using sqflite
+description: Get it done
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -20,73 +19,74 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  outline_material_icons: ^0.1.0
-  sqflite: ^1.1.5
-  intl: ^0.16.0
-  shared_preferences: ^0.5.3+1
-  data_connection_checker: ^0.3.4
-  share: ^0.6.1+1
-  flutter_local_notifications: 1.3.0
-  flutter_duration_picker: "^1.0.0"
-  esys_flutter_share: ^1.0.2
-  local_auth: 0.6.2+3
-  get_it: ^4.0.4
-  path_provider: ^1.4.1
-  flutter_swiper: ^1.1.4
-  flutter_form_builder: ^3.0.0
-  rxdart: ^0.20.0
-  firebase_storage: ^3.1.6
-  cloud_firestore: ^0.13.5
-  screenshot: ^0.1.1
-  flutter_calendar_carousel: ^1.4.12
-  faker: ^1.2.1
-  zefyr: ^0.10.0
-  reorderables: ^0.3.2
-  device_info: ^0.4.2+4
-  async: ^2.4.0
-  flare_flutter: ^1.5.5
-  firebase_auth: ^0.16.0
-  google_sign_in: ^4.1.1
-  firebase_database: ^3.0.7
-  image_picker: ^0.6.3
-  firebase_analytics: ^5.0.6
-  googleapis: ^0.54.0
-  date_utils: ^0.1.0+3
-  health: ^1.0.0
-  auto_route: ^0.3.0
-  bloc_provider: ^0.7.0
-  equatable: ^1.2.2
-  flutter_bloc: ^6.0.1
-  dartz: ^0.9.1
-  sa_anicoto: ^1.0.3
-  supercharged: ^1.10.0
-  connectivity: ^0.4.9
-  url_launcher: ^5.4.2
-  audioplayers: ^0.16.1
-
-  # The following adds the Cupertino Icons font to your application.   # Use with the CupertinoIcons class for iOS style icons.   cupertino_icons: ^0.1.2
-  csv: ^4.0.3
   sqflite_porter:
     git:
       url: git://github.com/tekartik/sqflite_more
       ref: dart2
-
       path: sqflite_porter
-    version: '>=0.2.0'
-  simple_animations: ^1.3.11
-  http: ^0.12.1
-  fl_chart: ^0.8.7
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  camera: ^0.5.8+5
+    version: ">=0.2.0"
+  async: ^2.4.0
+  audioplayers: ^0.16.1
+  auto_route: ^0.3.0
+  bloc_provider: ^0.7.0
   cached_network_image: ^2.0.0
+  camera: ^0.5.8+5
+  cloud_firestore: ^0.13.5
+  connectivity: ^0.4.9
+  crop: ^0.4.1
+  csv: ^4.0.3
+  cupertino_icons: ^0.1.2
+  dartz: ^0.9.1
+  data_connection_checker: ^0.3.4
+  date_utils: ^0.1.0+3
+  device_info: ^0.4.2+4
+  emoji_picker: ^0.1.0
+  equatable: ^1.2.2
+  esys_flutter_share: ^1.0.2
+  faker: ^1.2.1
+  file_picker: ^1.13.3
+  firebase_analytics: ^5.0.6
+  firebase_auth: ^0.16.0
+  firebase_database: ^3.0.7
+  firebase_storage: ^3.1.6
+  fl_chart: ^0.8.7
+  flare_flutter: ^1.5.5
+  flutter_bloc: ^6.0.1
+  flutter_cache_store: ^0.7.2
+  flutter_calendar_carousel: ^1.4.12
+  flutter_duration_picker: ^1.0.0
+  flutter_form_builder: ^3.0.0
+  flutter_local_notifications: 1.3.0
+  flutter_swiper: ^1.1.4
+  get_it: ^4.0.4
+  google_sign_in: ^4.1.1
+  googleapis: ^0.54.0
+  health: ^1.0.0
+  http: ^0.12.1
+  image_picker: ^0.6.3
+  intl: ^0.16.0
+  local_auth: 0.6.2+3
+  outline_material_icons: ^0.1.0
+  path_provider: ^1.4.1
+  permission_handler: ^5.0.1+1
+  reorderables: ^0.3.2
+  rxdart: ^0.20.0
+  sa_anicoto: ^1.0.3
+  screenshot: ^0.1.1
+  share: ^0.6.1+1
+  shared_preferences: ^0.5.3+1
+  simple_animations: ^1.3.11
+  sqflite: ^1.1.5
+  string_validator: ^0.1.4
+  supercharged: ^1.10.0
+  url_launcher: ^5.4.2
+  zefyr: ^0.12.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: null
   auto_route_generator: ^0.3.0
+  build_runner: null
 
 dependency_overrides:
   analyzer: '0.39.14'
@@ -129,6 +129,23 @@ flutter:
           style: italic
         - asset: fonts/EastmanTrial-Bold.otf
           weight: 700
+    - family: Lemonmilk
+      fonts:
+        - asset: fonts/LEMONMILK-Medium.otf
+        - asset: fonts/LEMONMILK-MediumItalic.otf
+          style: italic
+        - asset: fonts/LEMONMILK-Light.otf
+          weight: 200
+        - asset: fonts/LEMONMILK-Bold.otf
+          weight: 700
+    - family: Montserrat
+      fonts:
+        - asset: fonts/Montserrat-Medium.ttf
+        - asset: fonts/Montserrat-MediumItalic.ttf
+          style: italic
+        - asset: fonts/Montserrat-Light.ttf
+          weight: 200
+        - asset: fonts/Montserrat-Bold.ttf
+          weight: 700
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-
