--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,8 @@ dependencies:
   supercharged: ^1.10.0
   url_launcher: ^5.4.2
   zefyr: ^0.12.0
+  flutter_svg: ^0.18.1
+  material_design_icons_flutter: 4.0.5855
 
 dev_dependencies:
   flutter_test:
