--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,9 +14,13 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
     <application
-        android:name="io.flutter.app.FlutterApplication"
+       
         android:label="Sort.it"
+        android:name=".Application"
         android:icon="@mipmap/ic_launcher">
+        <meta-data
+    android:name="flutterEmbedding"
+    android:value="2" />
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -28,9 +32,17 @@
                  until Flutter renders its first frame. It can be removed if
                  there is no splash screen (such as the default splash screen
                  defined in @style/LaunchTheme). -->
-            <meta-data
-                android:name="io.flutter.app.android.SplashScreenUntilFirstFrame"
-                android:value="true" />
+                 <meta-data
+    android:name="io.flutter.embedding.android.SplashScreenDrawable"
+    android:resource="@drawable/launch_background" />
+
+  <!-- Theme to apply as soon as Flutter begins rendering frames -->
+  <meta-data
+    android:name="io.flutter.embedding.android.NormalTheme"
+    android:resource="@style/NormalTheme"
+    />
+    
+           
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -41,6 +53,11 @@
 
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"></action>
+            </intent-filter>
+
+            <intent-filter>
+                <action android:name="FLUTTER_NOTIFICATION_CLICK" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
 
