--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,9 +5,10 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.2.0'
 
-        classpath ('com.google.gms:google-services:4.2.0') {
+        classpath ('com.google.gms:google-services:4.3.2') {
             exclude group: 'com.google.guava', module: 'guava-jdk5'
         }
     }
