--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   
   cached_network_image: ^2.4.1
   camera: ^0.5.8+5
-  cloud_firestore: ^0.13.5
+
   connectivity: ^0.4.9
   crop: ^0.4.1
   csv: ^4.0.3
@@ -51,17 +51,27 @@ dependencies:
   faker: ^1.2.1
   scratcher: ^1.4.0
   file_picker: ^1.13.3
+  firebase_core: 
+  
+  firebase_auth: "^0.20.0+1"
+  firebase_crashlytics: "^0.4.0+1"
+  cloud_firestore: "^0.16.0"
+  cloud_functions: "^0.9.0"
+  firebase_storage: "^7.0.0"
+  firebase_messaging: 
   firebase_analytics: ^5.0.6
-  firebase_auth: ^0.16.0
-  firebase_database: ^3.0.7
-  firebase_storage: ^3.1.6
+ 
+ 
   fl_chart: ^0.8.7
+  analyzer: ^0.39.0
   flare_flutter: ^1.5.5
   flutter_bloc: ^6.0.1
   flutter_cache_store: ^0.7.2
   flutter_calendar_carousel: ^1.4.12
   flutter_duration_picker: ^1.0.0
   flutter_form_builder: ^3.0.0
+  overlay_support: ^1.0.5
+ 
   flutter_local_notifications: 1.3.0
   flutter_swiper: ^1.1.4
   scrollable_positioned_list: ^0.1.8
@@ -95,10 +105,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   auto_route_generator: ^0.3.0
-  build_runner: null
+  build_runner:
+  build_resolvers: ^1.3.11
+  
 
-dependency_overrides:
-  analyzer: '0.39.14'
+
+
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 # The following section is specific to Flutter.
