--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,8 @@ dependencies:
   flutter_svg: ^0.18.1
   material_design_icons_flutter: 4.0.5855
 
+  animations: ^1.1.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
