website updated for fitness

--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,6 @@
 {
   "hosting": {
-    "public": "dist/web",
-    "target": "static",
+    "public": "build",
     "ignore": [
       "firebase.json",
       "**/.*",
