--- a/web/package.json
+++ b/web/package.json
@@ -30,7 +30,11 @@
     "ngx-owl-carousel-o": "^4.0.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "nodemailer": "~6.5.0",
+    "express": "~4.17.1",
+    "body-parser": "~1.19.0",
+    "cors": "~2.8.5"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1002.0",
