--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <uses-permission  android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_CALL_LOG"/>
+    <uses-permission android:name="android.permission.ANSWER_PHONE_CALLS"/>
 
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
@@ -18,12 +21,13 @@
         android:label="Sort.it"
         android:name=".Application"
         android:icon="@mipmap/ic_launcher">
+       
         <meta-data
     android:name="flutterEmbedding"
     android:value="2" />
         <activity
             android:name=".MainActivity"
-            android:launchMode="singleTop"
+            android:launchMode="singleTask"
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
@@ -41,6 +45,7 @@
     android:name="io.flutter.embedding.android.NormalTheme"
     android:resource="@style/NormalTheme"
     />
+   
     
            
             <intent-filter>
@@ -63,5 +68,8 @@
          <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="high_importance_channel" />
+        <meta-data 
+        android:name="com.truecaller.android.sdk.PartnerKey" 
+        android:value="Y6RWAc9c32a1e646a498bbf81e9defd3ee73d"/> 
     </application>
 </manifest>
