--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -45,6 +45,17 @@
     android:name="io.flutter.embedding.android.NormalTheme"
     android:resource="@style/NormalTheme"
     />
+     <intent-filter>
+            <action android:name="android.intent.action.VIEW" />
+
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+
+            <data
+                android:host="connect.getsortit.com"
+                android:scheme="https" />
+        </intent-filter>
+    
    
     
            
