--- a/functions/package.json
+++ b/functions/package.json
@@ -13,9 +13,12 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "axios": "^0.21.1",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "firebase-admin": "^9.4.2",
     "firebase-functions": "^3.11.0",
+    "node-forge": "^0.10.0",
     "nodemailer": "^6.5.0"
   },
   "devDependencies": {
